--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.8",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
