--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
+    "mixpanel-browser": "^2.64.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mixpanel-browser": "^2.54.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
